--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -11,7 +11,7 @@ section {
 
 .jumbotron {
   padding-top: 6rem;
-  background-image: url('../img/undraw-village.png');
+  background-image: url('../img/bg-desa-kemiri.jpg');
   background-size: cover;
   text-align: center;
 }
